WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2022-05-12 Giovanni Bechis <g.bechis@snb.it>

	* add md_dkim_verify method to verify DKIM signatures

2022-05-03 Giovanni Bechis <g.bechis@snb.it>

	* add md_dkim_sign method to sign email messages
	  with DKIM signatures

2022-04-19 Giovanni Bechis <g.bechis@snb.it>

	* add anonymize_uri to remove utm_* parameters
	  from uris.

2022-04-14 Giovanni Bechis <g.bechis@snb.it>

	* use new Rspamd connection method by default

2022-02-10 Giovanni Bechis <g.bechis@snb.it>

        * switch to Digest::SHA

2022-02-04 Giovanni Bechis <g.bechis@snb.it>

        * split mimedefang.pl code in Perl modules

2022-02-02 Giovanni Bechis <g.bechis@snb.it>

        * add re_match_in_7zip_directory to check for files
	  inside 7zip archives

2021-12-17 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.86 RELEASED

2021-12-12 Giovanni Bechis <g.bechis@snb.it>

        * Rspamd support by forking rspamc(1) binary
        is now deprecated, added Rspamd support by implementing
        its protocol

2021-12-09 Giovanni Bechis <g.bechis@snb.it>

	* fallback to plaintext when md_check_against_smtp_server
	fails SSL connection for unknown reasons

2021-08-25 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.85 RELEASED

2021-07-28 Giovanni Bechis <g.bechis@snb.it>

	* add experimental support to scan emails with Rspamd antispam

2021-07-20 Giovanni Bechis <g.bechis@snb.it>

	* remove --enable_cleanup_with_rm "configure" parameter,
	switch to non reentrant version of readdir(3)

2021-04-20 Dianne Skoll <dianne@skoll.ca>

	* Obtain the Queue-ID as early as possible in the SMTP
	session. Requires the "-y" command-line option to mimedefang.

	* Add support for USE_SETSYMLIST in the system unit and Red Hat
	init script; setting USE_SETSYMLIST=yes adds the "-y" command-line
	option to mimedefang.
