@@ -1,0 +1,42 @@
+From mickey@dkim.org  Mon Oct  3 16:07:28 2005
+Return-Path: <mickey@dkim.org>
+Received: from sj-iport-1.cisco.com (sj-iport-1-in.cisco.com [171.71.176.70])
+	by testing.dkim.org (8.12.11/8.12.10) with ESMTP id j93N7Svo006972
+	for <george@dkim.org>; Mon, 3 Oct 2005 16:07:28 -0700
+Received: from sj-core-2.cisco.com ([171.71.177.254])
+  by sj-iport-1.cisco.com with ESMTP; 03 Oct 2005 17:05:17 -0700
+X-IronPort-AV: i="3.97,170,1125903600"; 
+   d="scan'208"; a="663225955:sNHT21674088"
+Received: from localhost.localdomain (msd-dev1.cisco.com [172.23.250.157])
+	by sj-core-2.cisco.com (8.12.10/8.12.6) with ESMTP id j9405CKC009921
+	for <george@dkim.org>; Mon, 3 Oct 2005 17:05:12 -0700 (PDT)
+Message-Id: <200510040005.j9405CKC009921@sj-core-2.cisco.com>
+Date: Thu, 31 May 2001 07:13:26 -0700 (PDT)
+From: mickey@dkim.org
+To: andy.zipper@enron.com, david.berberian@enron.com, rex.shelby@enron.com,
+        s..palmer@enron.com, david.forster@enron.com, marc.eichmann@enron.com
+Subject: GM - Very Promising Beginning
+Cc: john.pavetto@enron.com, leonardo.pacheco@enron.com
+Mime-Version: 1.0
+Content-Type: text/plain; charset=us-ascii
+Content-Transfer-Encoding: 7bit
+X-bcc: 
+X-Folder: \ExMerge - Zipper, Andy\origination
+X-Origin: ZIPPER-A
+X-FileName: andy zipper 6-26-02.PST
+Status: RO
+Lines: 29
+DKIM-Signature:  v=DKIM1; a=rsa-sha1; q=dns; l=86; t=1128380848; x=-1019102801;
+	c=nowsp; s=testing1234; h=Subject:From:To:Cc:Date:Content-Type:Content-Transfer-Encoding:MIME-Version;
+	d=dkim.org; i=mickey@dkim.org; z=From:mickey@dkim.org|
+	Subject:GM=20-=20Very=20Promising=20Beginning;
+	b=WHPaw9WX707uYfqQDQhRuhJg+zXnm0LygVgLhHz8muCQCGuAN2rlvCLg5kss7+2NCM6x1pvy
+	1JcYI3w4uWrYoQ==;
+Authentication-Results: testing.dkim.org; header.from=mickey@dkim.org; dkim=neutral
+
+Team
+
+I think this is good news.  We can cover this with Derrick on our conference call this morning.
+
+-John
+
